# alchemy-dev-agent

./: .alchemy-real-delivery-validation.md  .gitignore  ALCHEMY_LAB_NOTES.md  README.md  pyproject.toml
.codex-longrun/: blockers.md  progress.md  roadmap.md  state.json  test-log.md
autodev/: __init__.py  acceptance_run.py  agents.py  artifact_manifest.py  auto_iteration.py  benchmark_regression.py  benchmark_suite.py  central_review.py  delivery_evidence.py  delivery_report.py  demo_run.py  development_cycle.py  document_reference_expander.py  document_run.py  evidence_package.py  evidence_readiness.py  external_docs_only_acceptance.py  final_system_audit.py  final_verification_loop.py  full_roadmap_executor.py  game_generator.py  generated_development_package.py  github_pr_lifecycle.py  goal_locked_run.py  local_repository_acceptance.py  phase_promotion.py  pipeline.py  preflight.py  project_analysis_gate.py  real_delivery_validation.py  real_document_run_smoke.py  real_env_check.py  real_probe_index.py  real_readiness_probe.py  real_unified_delivery.py  real_worker_smoke.py  recovery_comparison.py  repair_suggestions.py  roadmap_auditor.py  roadmap_extractor.py  (+5 more)
context/: __init__.py  builder.py  models.py  objective_compiler.py  objective_models.py  reference_baseline.py  repository_indexer.py  requirement_extractor.py  semantic_inventory.py
docs/: 00_overview.md  01_architecture.md  02_agent_design.md  03_task_graph.md  04_codex_worker.md  05_evaluation_system.md  06_execution_loop.md  07_v2_development_plan.md  08_intake_and_context.md  10_v2_alignment_audit.md  (+188 more)
(+119 files in other folders)
